update jekyll site

--- a/_config.yml
+++ b/_config.yml
@@ -5,26 +5,17 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'jekyll serve'. If you change this file, please restart the server process.
 
-
-# إعدادات الموقع
-#أكتب هنا اسم الموقع
-title: مهدي علوان
-#أكتب هنا الإيميل الخاص بك/الموقع
-email: pro4medo@gmail.com
-#أكتب شرح رائع عن موقعك هنا. سوف يظهر في (head meta) الخاص بمستندك (من اجل نتائج بحث قووقل) و في شرح موقعك في ملف feed.xml
-
-description: مصمم ومطور ويب
-baseurl: "/webInit" # المسار الجانبي الخاص بموقعك مثلاً (/blog)
-url: "webinit.gitub.io" # هوستنيم و بروتوكول موقع
-twitter_username: medo_alouane
-github_username:  mehdi-alouane
+# Site settings
+title: Your awesome title
+email: your-email@domain.com
+description: > # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://yourdomain.com" # the base hostname & protocol for your site
+twitter_username: jekyllrb
+github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-highlighter: rouge
-
-# Outputting
-permalink: pretty
-
-liquid:
-  error_mode: warn
